--- a/style.css
+++ b/style.css
@@ -7,16 +7,21 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 60.5%;
   box-sizing: border-box;
+}
+@media only screen and (max-width: 600px) {
+  html {
+    font-size: 30%;
+  }
 }
 
 body {
   font-family: 'Nunito', sans-serif;
   font-weight: 400;
   height: 100vh;
-  color: #333;
-  background-image: linear-gradient(to top left, #753682 0%, #bf2e34 100%);
+  color: #040b14;
+  background-image: linear-gradient(to top left, #040b14 0%, #149ddd 100%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -59,7 +64,7 @@ main {
 .score {
   font-size: 8rem;
   font-weight: 300;
-  color: #c7365f;
+  color: #149ddd;
   margin-bottom: auto;
 }
 
@@ -78,7 +83,7 @@ main {
 }
 
 .current {
-  background-color: #c7365f;
+  background-color: #149ddd;
   opacity: 0.8;
   border-radius: 9px;
   color: #fff;
@@ -104,7 +109,7 @@ main {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  color: #444;
+  color: #040b14;
   background: none;
   border: none;
   font-family: inherit;
@@ -155,13 +160,20 @@ main {
   transform: translateX(-50%);
   height: 10rem;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
 }
 
 .player--winner {
-  background-color: #2f2f2f;
+  background-color: #98e778;
 }
 
 .player--winner .name {
   font-weight: 700;
-  color: #c7365f;
+  color: #149ddd;
+}
+
+/* Hidden class*/
+
+.hidden {
+  display: none;
 }
